# hello-template

./: .gitignore  README.md  flake.nix  pyproject.toml  steps.sh
.github/workflows/: test.yml
docs/: hello.html  search.js
nix/: codegen.nix  common.nix  constants.nix  docs.nix  nix-analysis.nix  python-analysis.nix  version-bump.nix  version.nix
src/hello/: __init__.py  cli.py
tests/: test_cli.py
